[gd_scene load_steps=8 format=3 uid="uid://ctxt2mrdrdeet"]

[ext_resource type="Script" uid="uid://bovd04t1t0jrp" path="res://Scenes/PCUI/Site/login_site.gd" id="1_ktf6f"]
[ext_resource type="Script" uid="uid://dowle5kcyix4l" path="res://Scenes/PCUI/window_base.gd" id="2_6x7dh"]
[ext_resource type="Script" uid="uid://ckrb42td6676t" path="res://Scenes/PCUI/Site/accounts_panel.gd" id="3_fekqi"]
[ext_resource type="Texture2D" uid="uid://bimwtd4ln5ssr" path="res://Scenes/PCUI/Site/Bank.png" id="4_j0mnj"]
[ext_resource type="FontFile" uid="uid://db16gjjdg8f7x" path="res://Assets/Fonts/VT323-Regular.ttf" id="5_tdvof"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6x7dh"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ikyvv"]
texture = ExtResource("4_j0mnj")

[node name="LoginSite" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ktf6f")

[node name="WindowBase" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_6x7dh")

[node name="Panel" type="Panel" parent="WindowBase"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6x7dh")

[node name="VBoxContainer" type="VBoxContainer" parent="WindowBase/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Bank Login" type="Label" parent="WindowBase/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "WordPress"

[node name="LoginField" type="LineEdit" parent="WindowBase/Panel/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
placeholder_text = "Login..."

[node name="PasswordField" type="LineEdit" parent="WindowBase/Panel/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
placeholder_text = "Password..."

[node name="SubmitButton" type="Button" parent="WindowBase/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Enter"

[node name="ResultLabel" type="Label" parent="WindowBase/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Button" type="Button" parent="WindowBase/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.984
anchor_top = 0.006
anchor_right = 0.997
anchor_bottom = 0.029
offset_left = 7.71997
offset_top = -1.48
offset_right = 0.759888
offset_bottom = 4.68
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
text = "X"

[node name="AccountsPanel" type="Panel" parent="WindowBase"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.126
anchor_right = 0.567
anchor_bottom = 0.711
offset_left = -16.0
offset_top = -17.08
offset_right = 0.359985
offset_bottom = 17.12
script = ExtResource("3_fekqi")

[node name="PanelContainer" type="PanelContainer" parent="WindowBase/AccountsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ikyvv")

[node name="VBoxContainer" type="VBoxContainer" parent="WindowBase/AccountsPanel/PanelContainer"]
layout_mode = 2

[node name="HeaderHBox" type="HBoxContainer" parent="WindowBase/AccountsPanel/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="WindowBase/AccountsPanel/PanelContainer/VBoxContainer/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_fonts/font = ExtResource("5_tdvof")
theme_override_font_sizes/font_size = 30
text = "Victoriabank"

[node name="LogoutButton" type="Button" parent="WindowBase/AccountsPanel/PanelContainer/VBoxContainer/HeaderHBox"]
layout_mode = 2
text = "Log out"

[node name="ScrollContainer" type="ScrollContainer" parent="WindowBase/AccountsPanel/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="WindowBase/AccountsPanel/PanelContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DetailsLabel" type="Label" parent="WindowBase/AccountsPanel/PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="WindowBase/Panel/VBoxContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="WindowBase/Panel/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="WindowBase/AccountsPanel/PanelContainer/VBoxContainer/HeaderHBox/LogoutButton" to="WindowBase/AccountsPanel" method="_on_logout_button_pressed"]
